tests/xy_c_compile_resources/errors/handling1.xy
struct Error {
    code: Int;
}

func to(err: Error, :Bool) err.code != 0;

func unhandled(err: Error) {
    # log the error or something ...
}

func errorProne() -> void | Error {
    error Error{5};
}

func doWork() -> void | Error {
    errorProne();
}

func test1() {
    doWork();
}

func test2() {
    error Error{10};
}